--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,7 @@ stopwords = Str
 stopwords = TaskWeaver
 stopwords = UploadToCPAN
 stopwords = dist.ini
+stopwords = dzil
 stopwords = hartzell's
 
 ; plugins that the bundle needs but that are not discoverable
@@ -62,4 +63,9 @@ Dist::Zilla::Plugin::Test::PodSpelling = 2.001002
 Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::Test::Version = 0
 Dist::Zilla::Plugin::TestRelease = 0
- 
+
+[Prereqs / TestRecommends]
+Pod::Coverage::TrustPod = 0
+Test::CPAN::Meta = 0
+Test::Perl::Critic = 0
+Test::Pod::Coverage = 0
