Import of HARTZELL/Dist-Zilla-PluginBundle-HARTZELL-0.007 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-HARTZELL
gitpan-cpan-version:      0.007
gitpan-cpan-path:         HARTZELL/Dist-Zilla-PluginBundle-HARTZELL-0.007.tar.gz
gitpan-cpan-author:       HARTZELL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,7 @@
 abstract: 'My standard dzil config.'
 author:
   - 'George Hartzell <hartzell@cpan.org>'
+  - 'David Golden <dagolden@cpan.org>'
 build_requires:
   File::Find: 0
   File::Temp: 0
@@ -27,7 +28,10 @@ no_index:
 provides:
   Dist::Zilla::PluginBundle::HARTZELL:
     file: lib/Dist/Zilla/PluginBundle/HARTZELL.pm
-    version: 0.006
+    version: 0.007
+  Pod::Weaver::PluginBundle::HARTZELL:
+    file: lib/Pod/Weaver/PluginBundle/HARTZELL.pm
+    version: 0.007
 requires:
   Dist::Zilla: 4.3
   Dist::Zilla::Plugin::AutoMetaResources: 0
@@ -77,6 +81,8 @@ requires:
   Dist::Zilla::Role::PluginBundle::Config::Slicer: 0
   Dist::Zilla::Role::PluginBundle::Easy: 0
   Moose: 0.99
+  Pod::Elemental::Transformer::List: 0.101620
+  Pod::Weaver::Config::Assembler: 0
   autodie: 2.00
   namespace::autoclean: 0.09
   perl: 5.006
@@ -86,4 +92,4 @@ resources:
   bugtracker: https://github.com/hartzell/dist-zilla-pluginbundle-hartzell/issues
   homepage: https://metacpan.org/release/Dist-Zilla-PluginBundle-HARTZELL
   repository: git://github.com/hartzell/dist-zilla-pluginbundle-hartzell.git
-version: 0.006
+version: 0.007
