--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
 name    = Dist-Zilla-PluginBundle-HARTZELL
 author  = George Hartzell <hartzell@cpan.org>
+author  = David Golden <dagolden@cpan.org>
 license = Perl_5
 copyright_holder = George Hartzell
 
@@ -9,6 +10,7 @@ stopwords = AutoPrereqs
 stopwords = ConfigSlicer
 stopwords = DAGOLDEN's
 stopwords = FakeRelease
+stopwords = HARTZELL's
 stopwords = PodWeaver
 stopwords = Str
 stopwords = TaskWeaver
